Dim red toepassing gecorrigeerd

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "CiDn2Sk-VWqE",
         "colab": {
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "RPltM9lAmbIn"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -173,7 +173,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
         "id": "Llz2aPWlneOo",
         "outputId": "094e480e-f373-4aaf-afc3-6bfdda681e83"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -327,7 +327,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +390,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,7 +426,7 @@
       "metadata": {
         "id": "vR4vx1oJoZBn"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -468,7 +468,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +544,7 @@
         },
         "outputId": "91c43a37-b4b9-4915-e3b5-222da1df8a68"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,7 +637,7 @@
         },
         "outputId": "221f8f1b-2821-4ac0-a975-5174f3be54aa"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,61 +671,15 @@
     {
       "cell_type": "code",
       "source": [
-        "print(X_train_zv.shape)\n",
-        "print(X_test_zv.shape)\n",
-        "\n",
-        "best_k_index = np.argmax(average_accuracies)\n",
-        "best_k = k_values[best_k_index]\n",
-        "best_accuracy = average_accuracies[best_k_index]\n",
-        "print(best_k)\n",
-        "\n",
+        "# Applying best dimensionality reduction technique to dataset\n",
+        "# Value chosen based on graphs in previous two blocks\n",
         "best_k=2\n",
-        "print(best_k)\n",
         "\n",
-        "\n",
-        "selector_fs = SelectKBest(f_classif, k=best_k) #dit veranderen ahv plot\n",
+        "selector_fs = SelectKBest(f_classif, k=best_k)\n",
         "fitted_kbest = selector_fs.fit(X_train_zv, Y_train)\n",
         "\n",
         "X_train_fs = fitted_kbest.transform(X_train_zv)\n",
-        "X_test_fs = fitted_kbest.transform(X_test_zv)\n",
-        "\n",
-        "\n",
-        "print(X_train_fs.shape)\n",
-        "print(X_test_fs.shape)\n",
-        "# print()\n",
-        "\n",
-        "# print(f\"Best k is k = {best_k} with accuracy of {best_accuracy:.3f}\")\n",
-        "# print(f\"Selected features for k={best_k} are: {selected_feature_names}\")\n",
-        "# print()\n",
-        "\n",
-        "# if len(selected_feature_names) ==2:\n",
-        "#   seaborn.scatterplot(x=selected_feature_names[0], y=selected_feature_names[1], hue = Y, data = data)\n",
-        "# if len(selected_feature_names) == 3:\n",
-        "#     fig = plt.figure(figsize=(8, 6))\n",
-        "#     ax = fig.add_subplot(111, projection='3d')\n",
-        "\n",
-        "#     # Extract the features for plotting\n",
-        "#     feature1 = X_train_fs[:, 0]\n",
-        "#     feature2 = X_train_fs[:, 1]\n",
-        "#     feature3 = X_train_fs[:, 2]\n",
-        "\n",
-        "#     # Scatter plot\n",
-        "#     scatter = ax.scatter(feature1, feature2, feature3, c=Y_train, cmap='viridis', alpha=0.7)\n",
-        "\n",
-        "#     # Labeling\n",
-        "#     ax.set_xlabel(selected_feature_names[0])\n",
-        "#     ax.set_ylabel(selected_feature_names[1])\n",
-        "#     ax.set_zlabel(selected_feature_names[2])\n",
-        "\n",
-        "#     # Color bar\n",
-        "#     cbar = plt.colorbar(scatter, ax=ax)\n",
-        "#     cbar.set_label('Target')\n",
-        "\n",
-        "#     plt.title('3D Scatter Plot of Selected Features')\n",
-        "#     plt.show()\n",
-        "\n",
-        "# elif len(selected_feature_names) == 1 :\n",
-        "#   print(\"Visualization of a 2D scatterplot is not possible for k = {best_k}\")"
+        "X_test_fs = fitted_kbest.transform(X_test_zv)\n"
       ],
       "metadata": {
         "id": "faErTr4ro3BA",
@@ -734,7 +688,7 @@
         },
         "outputId": "dbfd6ec0-3224-4109-83aa-70cb835f262c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +722,7 @@
       "metadata": {
         "id": "RKn4Kt6zjDjV"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -883,7 +837,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
