--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -484,7 +484,6 @@
       "cell_type": "code",
       "source": [
         "# Evaluating performance of selectkbest feature selection on data set\n",
-        "\n",
         "kf = StratifiedKFold(n_splits=10)\n",
         "k_values = range(1, 11)\n",
         "average_accuracies = []\n",
@@ -578,20 +577,16 @@
       "cell_type": "code",
       "source": [
         "# Evaluating performance of PCA on dataset\n",
-        "\n",
-        "skf = StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
+        "skf = StratifiedKFold(n_splits=10)\n",
         "components = range(1, 11)\n",
         "average_accuracies = []\n",
         "std_accuracies = []\n",
-        "plot_proberen = []\n",
+        "\n",
         "\n",
         "for n_components in components:\n",
         "    pca = PCA(n_components=n_components)\n",
         "    X_train_pca = pca.fit_transform(X_train_zv)\n",
         "    variance = pca.explained_variance_ratio_\n",
-        "\n",
-        "    if n_components == 2:\n",
-        "        plot_proberen.append(X_train_pca)\n",
         "\n",
         "    accuracies = []\n",
         "\n",
